# pdf-watermark

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  inputs.py  main.py  pyproject.toml  requirements.txt  setup.py  utils.py  watermark.py
.github/workflows/: lint-and-test.yml  publish-to-pypi.yml  publish-to-test-pypi.yml  test.yml
app/: draw.py  handler.py  inputs.py  objects.py  options.py  utils.py
docs/superpowers/plans/: 2026-05-19-pdf-watermark-gui.md
docs/superpowers/specs/: 2026-05-19-pdf-watermark-gui-design.md
scripts/: install-poppler.ps1  start-gui.bat  start-gui.ps1  stop-gui.bat  stop-gui.ps1
src/pdf_watermark/: __init__.py  draw.py  font_utils.py  handler.py  options.py  utils.py  watermark.py
src/pdf_watermark/gui/: app.py  routes.py
src/pdf_watermark/gui/templates/: index.html
tests/: test_add_watermark_from_options.py  test_cli_integration.py  test_different_page_sizes.py  test_files_options_directory.py  test_fonts.py  test_gui_app.py  test_gui_routes.py  test_outline_preservation.py  test_register_fonts.py  test_workers.py  utils.py
tests/fonts/: TestFont LICENSE.txt
