[project]
name = "pdf-watermark"
dynamic = ["version"]
description = "A python CLI tool to add watermarks to a PDF"
readme = "README.md"
license-files = ["LICENSE"]
authors = [
    { name = "Bastien Le Chenadec", email = "bastien.lechenadec@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
keywords = ["pdf", "watermark", "cli"]

# Dependencies

requires-python = ">=3.10"
dependencies = [
    "pypdf>=3.11.0",
    "pillow>=9.5.0",
    "reportlab>=4.0.4",
    "numpy>=1.25.0",
    "click>=8.1.3",
    "pdf2image>=1.17.0",
]

[dependency-groups]
dev = ["pre-commit>=4.2.0", "pytest>=8.4.1", "pytest-cov>=6.2.1"]

# Build

[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project.scripts]
watermark = "pdf_watermark.watermark:cli"

[tool.setuptools_scm]
version_file = "src/pdf_watermark/_version.py"
local_scheme = "no-local-version"

# Other

[project.urls]
Homepage = "https://github.com/bastienlc/pdf-watermark"
Repository = "https://github.com/bastienlc/pdf-watermark.git"
"Bug Tracker" = "https://github.com/bastienlc/pdf-watermark/issues"

[tool.pytest.ini_options]
pythonpath = "src"
